Fixed strange horizontal scroll bar issue on some pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ h2 {
 		font-size: 190%;
 	}
 }
+
 h3 {
 	font-size: 150%;
 	font-weight: 500;
@@ -100,6 +101,7 @@ html, body {
 	font-family: "Cinzel Decorative", "Palatino Light", Times, Times New Roman, Georgia, serif;
 	font-weight: 300;
 	text-rendering: optimizeLegibility;
+	overflow-x: hidden;
 }
 @media (min-width: 768px) {
 	html, body {
